--- a/delivery.html
+++ b/delivery.html
@@ -39,7 +39,7 @@
 
    <div class="category-menu" id="categoryMenu">
   <!-- Dining Out -->
-  <a href="zomato.html" class="category"
+  <a href="index.html" class="category"
      data-default="	https://b.zmtcdn.com/data/o2_assets/78d25215ff4c1299578ed36eefd5f39d1616149985.png"
      data-active="https://b.zmtcdn.com/data/o2_assets/30fa0a844f3ba82073e5f78c65c18b371616149662.png">
     <img src="https://b.zmtcdn.com/data/o2_assets/78d25215ff4c1299578ed36eefd5f39d1616149985.png" alt="Dining Out">
